# linux-OpenGL-project

./: CMakeLists.txt  Main.cpp  README.md
resources/data/: naturalTiles.cpp
resources/headers/: cameraClass.h  classes.h  stb_image.h  tileHandling.h
resources/libraries/freetype/: CMakeLists.txt
resources/shaders/: debug.frag  debug.vert  foliage.vert  lights.vert  outline.frag  rays.frag  rays.vert  skybox.frag  skybox.vert  text.vert  tiles.frag  tiles.vert
src/: glad.c  glad.h  inputHandler.cpp  main.cpp  stb_image.cpp
